production/tools/tests/gaiat/tags_test28.ruleset
////////////////////////////////////////////////////
// Copyright (c) Gaia Platform Authors
//
// Use of this source code is governed by the MIT
// license that can be found in the LICENSE.txt file
// or at https://opensource.org/licenses/MIT.
////////////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

int strcmp(const char*, const char*){return 0;}
ruleset test58
{
   on_insert(sensor)
   {
        if (i:incubator.min_temp > 5 && (strcmp(i.sensors.name, "1") == 0))
        {
        }
    }
}

// CHECK: error: Invalid explicit path.
